cloudformation/inUse.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Tracking for inCopy & Octopus plugins
Parameters:
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
  Stage:
    Description: Environment name
    Type: String
    AllowedValues:
      - PROD
  Stack:
    Description: Stack name
    Type: String
    AllowedValues:
      - flexible
  VpcId:
    Description: ID of the VPC onto which to launch the application eg. vpc-1234abcd
    Type: AWS::EC2::VPC::Id
  PrivateVpcSubnets:
    Description: Subnets to use in VPC for private EC2 instances eg. subnet-abcd1234
    Type: List<AWS::EC2::Subnet::Id>
  PublicVpcSubnets:
    Description: Subnets to use in VPC for public EC2 instances eg. subnet-abcd1234
    Type: List<AWS::EC2::Subnet::Id>
  AmigoAMI:
    Description: AMI id from Amigo
    Type: String
  InstanceType:
    Description: The instance type for the database nodes (typically smaller for prePROD)
    Type: String
    Default: t2.micro
  CertificateArn:
    Description: Arn of TLS certificate
    Type: String
Resources:
  ServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'ServerRole'
  ServerRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
  DescribeEC2Policy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: DescribeEC2Policy
      PolicyDocument:
        Statement:
          - Action:
              - EC2:Describe*
              - elasticloadbalancing:Describe*
            Effect: Allow
            Resource: '*'
          - Effect: Allow
            Action: dynamodb:*
            Resource: '*'
          - Action:
              - cloudformation:DescribeStacks
            Effect: Allow
            Resource: !Ref 'AWS::StackId'
      Roles:
        - !Ref 'ServerRole'
  CloudwatchPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: CloudwatchPolicy
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action:
              - cloudwatch:PutMetricData
            Resource: '*'
      Roles:
        - !Ref 'ServerRole'
  GetDistributablesPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: GetDistributablesPolicy
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action:
              - s3:GetObject
            Resource:
              - arn:aws:s3:::composer-dist/*
      Roles:
        - !Ref 'ServerRole'
  GetSSHPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: GetSSHPolicy
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action:
              - s3:GetObject
              - s3:ListObjects
            Resource:
              - arn:aws:s3:::github-team-keys/*
      Roles:
        - !Ref 'ServerRole'
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from the office
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 10.0.0.0/8
  AppServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: application servers
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          SourceSecurityGroupId: !Ref 'LoadBalancerSecurityGroup'
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: load balancer
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 77.91.248.0/21
  LoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      SecurityGroups:
        - !GetAtt 'LoadBalancerSecurityGroup.GroupId'
      CrossZone: true
      Subnets: !Ref 'PublicVpcSubnets'
      Listeners:
        - LoadBalancerPort: '443'
          InstancePort: '9000'
          Protocol: HTTPS
          SSLCertificateId: !Ref 'CertificateArn'
      HealthCheck:
        Target: HTTP:9000/management/healthcheck
        HealthyThreshold: '2'
        UnhealthyThreshold: '2'
        Interval: '10'
        Timeout: '5'
      Tags:
        - Key: Stage
          Value: !Ref 'Stage'
        - Key: Stack
          Value: !Ref 'Stack'
        - Key: App
          Value: 'in-use'
  AutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref 'PrivateVpcSubnets'
      LaunchConfigurationName: !Ref 'LaunchConfig'
      LoadBalancerNames:
        - !Ref 'LoadBalancer'
      MinSize: 1
      MaxSize: 2
      Cooldown: '180'
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Name
          Value: !Join ['', [!Ref 'Stage', ':in-use']]
          PropagateAtLaunch: 'true'
        - Key: Stage
          Value: !Ref 'Stage'
          PropagateAtLaunch: 'true'
        - Key: Stack
          Value: !Ref 'Stack'
          PropagateAtLaunch: 'true'
        - Key: App
          Value: in-use
          PropagateAtLaunch: 'true'
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref 'KeyName'
      ImageId: !Ref 'AmigoAMI'
      SecurityGroups:
        - !Ref 'SSHSecurityGroup'
        - !Ref 'AppServerSecurityGroup'
      InstanceType: !Ref 'InstanceType'
      IamInstanceProfile: !Ref 'ServerInstanceProfile'
      UserData: !Base64
        'Fn::Base64': !Sub |
                  #!/bin/bash -ev
                  aws s3 cp s3://composer-dist/flexible/${Stage}/in-use/in-use.deb /tmp
                  dpkg -i /tmp/in-use.deb
